yaml_parser/tests/fail/invalid-text-after-block-scalar-indicator.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 2, column 11
  |
2 | folded: > first line
  |           ^
expected `...`
